--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 # MRSOM #
 
-Parallelizing SOM on MR-MPI
+Parallelizing Batch SOM algorithm on MR-MPI
 
-
+To run examples, please execute /data/run-mrsom.sh
