--- a/HISTORY
+++ b/HISTORY
@@ -77,6 +77,10 @@ v10 -> mrsom2
     09.14.2011      Update to support sparse matrix 
     09.16.2011      Clean up before merging & merge
     
+v11
+    11.04.2011      Add another map() for MPI_Reduce() calls
     
+    
+
     
 
